tests/typecheck/fail/eq_both_shorthand_variants.tw
// Both sides are context-free shorthand variants — should still fail.
type TokenKind = { Use, Fn, Ident, Eof }

fn test() Bool {
  .Use == .Fn
}
